# Retail-Network

./: .env.sample  README.md  dealers_data.json  pyproject.toml
config/: settings.py  urls.py
dealers/: admin.py  models.py  permissions.py  serializers.py  urls.py
dealers/management/commands/: csu.py
dealers/migrations/: 0001_initial.py  0002_contacts.py  0003_products_factory_retailnetwork_and_more.py  0004_alter_contacts_house_number.py  0005_alter_factory_debt.py  0006_remove_factory_products_and_more.py  0007_alter_factory_products_and_more.py  0008_alter_factory_contacts.py
dealers/views/: views_for_contacts.py  views_for_country.py  views_for_enterpreneur.py  views_for_factory.py  views_for_network.py  views_for_product.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
